new check route, fixed bugs in filtered dishes and the tips

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -31,6 +31,10 @@ $jumbotron-bg: rgba(233, 236, 239, 0.8);
   font-family: laChape;
   font-size: 35px;
 }
+.curvedFont--sm {
+  font-family: laChape;
+  font-size: 25px;
+}
 body {
   margin: 0;
   padding: 0;
