--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -46,10 +46,13 @@ body {
 }
 
 .Background-img {
-  background-image: url('https://i.imgur.com/QX4PSdJ.png');
+  background-image: url('https://i.imgur.com/n7NvGlz.png');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+}
+.black-bg {
+  background-color: #000000;
 }
 
 .Background-img--cooks {
