--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -90,6 +90,10 @@ li {
   background-size: cover;
   height: 100vh;
 }
+.Background-img--home {
+  background-image: url('https://i.imgur.com/n7NvGlz.png');
+  // opacity: 0.5;
+}
 
 .Background-img--cooks {
   background-image: url('https://i.imgur.com/PJWfJRz.png');
